Name:         xcb-types
Version:      0.1.0
Synopsis:     Parses XML files used by the XCB project
Decription:   This package provides types which mirror the structures
  used in the XCB project 'http://xcb.freedesktop.org/'.
  These XML files describe the data-types, events and requests used by the
  X Protocol, and are used to auto-generates large parts of the XCB project.
  If you want to do something with these XML descriptions, but don't want
  to learn XSLT, this package should help.

License:      BSD3
License-file: LICENSE
Author:       Antoine Latter
Maintaner:    Antoine Latter <aslatter@gmail.com>

Library:

Build-depends: base, xml
Exposed-modules: XCB,
                 XCB.Types,
                 XCB.Pretty,
                 XCB.FromXML

Other-modules:   XCB.Utils

